# TapeMZ

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README_cz.md
docs/cz/: Changelog.md  TapeMZ.md  tmz-specification.md  tools-bsd2dat.md  tools-dat2bsd.md  tools-mzf2tmz.md  tools-tap2tmz.md  tools-tmz2mzf.md  tools-tmz2tap.md  tools-tmz2wav.md  tools-tmzconv.md  tools-tmzedit.md  tools-tmzinfo.md  tools-wav2tmz.md
docs/en/: Changelog.md  TapeMZ.md  tmz-specification.md  tools-bsd2dat.md  tools-dat2bsd.md  tools-mzf2tmz.md  tools-tap2tmz.md  tools-tmz2mzf.md  tools-tmz2tap.md  tools-tmz2wav.md  tools-tmzconv.md  tools-tmzedit.md  tools-tmzinfo.md  tools-wav2tmz.md
scripts/: md2html.py
src/libs/: baseui_compat.h
src/libs/cmt_stream/: cmt_bitstream.c  cmt_bitstream.h  cmt_stream.c  cmt_stream.h  cmt_stream_all.h  cmt_vstream.c  cmt_vstream.h
src/libs/cmtspeed/: cmtspeed.c  cmtspeed.h
src/libs/endianity/: endianity.c  endianity.h
src/libs/generic_driver/: generic_driver.c  generic_driver.h  memory_driver.c  memory_driver.h
src/libs/mzcmt_bsd/: mzcmt_bsd.c  mzcmt_bsd.h
src/libs/mzcmt_cpmtape/: mzcmt_cpmtape.c  mzcmt_cpmtape.h
src/libs/mzcmt_direct/: loader_direct.asm  mzcmt_direct.c  mzcmt_direct.h
src/libs/mzcmt_fastipl/: mzcmt_fastipl.c  mzcmt_fastipl.h
src/libs/mzcmt_fsk/: loader_fsk.asm  mzcmt_fsk.c  mzcmt_fsk.h
src/libs/mzcmt_slow/: loader_slow.asm  mzcmt_slow.c  mzcmt_slow.h
src/libs/mzcmt_turbo/: loader_turbo.asm  mzcmt_turbo.c  mzcmt_turbo.h
src/libs/mzf/: mzf.c  mzf.h  mzf_tools.c  mzf_tools.h
src/libs/mztape/: mztape.c  mztape.h
src/libs/sharpmz_ascii/: sharpmz_ascii.c  sharpmz_ascii.h  sharpmz_utf8.c  sharpmz_utf8.h
src/libs/tmz/: README.md  tmz.c  tmz.h  tmz_blocks.c  tmz_blocks.h  tmz_player.c  tmz_player.h
src/libs/tzx/: README.md  tzx.c  tzx.h
src/libs/wav/: wav.c  wav.h
src/libs/wav_analyzer/: wav_analyzer.c  wav_analyzer.h  wav_analyzer_types.c  wav_analyzer_types.h  wav_classify.c  wav_classify.h  wav_decode_bsd.c  wav_decode_bsd.h  wav_decode_cpmtape.c  wav_decode_cpmtape.h  wav_decode_direct.c  wav_decode_direct.h  wav_decode_fastipl.c  wav_decode_fastipl.h  wav_decode_fm.c  wav_decode_fm.h  wav_decode_fsk.c  wav_decode_fsk.h  wav_decode_slow.c  wav_decode_slow.h  wav_decode_turbo.c  wav_decode_turbo.h  wav_decode_zx.c  wav_decode_zx.h  wav_histogram.c  wav_histogram.h  wav_leader.c  wav_leader.h  wav_preprocess.c  wav_preprocess.h  wav_pulse.c  wav_pulse.h
src/libs/zxtape/: zxtape.c  zxtape.h
src/tools/bsd2dat/: bsd2dat.c
src/tools/dat2bsd/: dat2bsd.c
src/tools/extract_preloader/: extract_preloader.c
src/tools/mzf2tmz/: mzf2tmz.c
src/tools/tap2tmz/: tap2tmz.c
src/tools/tmz2mzf/: tmz2mzf.c
src/tools/tmz2tap/: tmz2tap.c
src/tools/tmz2wav/: tmz2wav.c
src/tools/tmzconv/: tmzconv.c
src/tools/tmzedit/: tmzedit.c
src/tools/tmzinfo/: tmzinfo.c
src/tools/wav2tmz/: wav2tmz.c
tests/: test_bsd_incomplete.c  test_bsd_roundtrip.c  test_bsd_wav.c  test_cpm_roundtrip.c  test_cpmtape_roundtrip.c  test_direct_roundtrip.c  test_direct_tape_roundtrip.c  test_direct_tape_wav.c  test_fastipl_roundtrip.c  test_fsk_roundtrip.c  test_fsk_tape_roundtrip.c  test_ic_loader_all.c  test_ic_normal.c  test_ic_sinclair_all.c  test_ic_wav.c  test_mz80b_roundtrip.c  test_slow_roundtrip.c  test_slow_tape_roundtrip.c  test_tc_loader_all.c  test_tc_normal.c  test_turbo_roundtrip.c  test_zx_roundtrip.c
tstdata/: README.md
